[gd_scene load_steps=5 format=2]

[ext_resource path="res://Temp_Assets/shotgun.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Weapon_Pickup.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/PickupPrompt.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[node name="Weapon Pickup" type="Node2D"]
script = ExtResource( 2 )

[node name="Pickup area" type="Area2D" parent="."]
collision_layer = 2049
collision_mask = 2049

[node name="CollisionShape2d" type="CollisionShape2D" parent="Pickup area"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Pickup area/CollisionShape2d"]
position = Vector2( 2, -2 )
scale = Vector2( 2.6875, 1.9375 )
z_index = 1
texture = ExtResource( 1 )

[node name="PickupPrompt" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -36, 33 )

[connection signal="body_entered" from="Pickup area" to="." method="_on_Pickup_area_body_entered"]
[connection signal="body_exited" from="Pickup area" to="." method="_on_Pickup_area_body_exited"]
